created directives header / cookies

--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,9 +1,4 @@
-<nav>
-  <ol class="breadcrumb">
-    <li><a href="/">Home</a></li>
-    <li class="active"><a href="{{path}}">{{path}}</a></li>
-  </ol>
-</nav>
+<div header></div>
 <h1>
   about
 </h1>
