--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -23,8 +23,14 @@
       </p>
     </div>
     <div class="row">
-      <div id="greeting" class="col-md-4 col-md-offset-4" style="visibility:hidden;">
+      <div id="greeting" class="col-md-8 col-md-offset-2" style="visibility:hidden;">
         <p id="greeting-text" class="interactive-text">
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div id="greeting" class="col-md-8 col-md-offset-2" style="visibility:hidden;">
+        <p id="greeting-text-two" class="interactive-text">
         </p>
       </div>
     </div>
