--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -1,8 +1,2 @@
-<nav>
-  <ol class="breadcrumb">
-    <li><a href="/">Home</a></li>
-    <li class="active"><a href="{{path}}">{{path}}</a></li>
-  </ol>
-</nav>
-
+<div header name="name"></div>
 <h1> Portfolio Page</h1>
