--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,4 +1,4 @@
-<div class="black-bg">
+<div class="white-bg">
   <div class="row home-top">
     <div class="col-md-offset-4 col-md-4 text-center">
       <img src="images/ng_lg.png" class="center-block img-padding" width="20%" height="20%"/>
@@ -25,12 +25,6 @@
     <div class="row">
       <div id="greeting" class="col-md-8 col-md-offset-2" style="visibility:hidden;">
         <p id="greeting-text" class="interactive-text">
-        </p>
-      </div>
-    </div>
-    <div class="row">
-      <div id="greeting" class="col-md-8 col-md-offset-2" style="visibility:hidden;">
-        <p id="greeting-text-two" class="interactive-text">
         </p>
       </div>
     </div>
