--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -140,7 +140,7 @@ a:visited{
 }
 
 a:hover {
-  color: white !important;
+  color: black !important;
   text-decoration: none;
 }
 
@@ -164,8 +164,6 @@ a:active {
 .welcome-table {
   padding-bottom: 100px;
 }
-
-
 
 .home-top {
   height: 30%;
