--- a/public/partials/social.html
+++ b/public/partials/social.html
@@ -8,7 +8,7 @@
       <div class="well white-bg col-md-4 col-md-offset-4">
         <div class="row">
           <div class="col-md-2 white-bg">
-            <img src="images/twitter.png" width="100%" />
+            <!-- <img src="images/twitter.png" width="100%" /> -->
             <!-- <img src="{{tweet.user.profile_image_url_https}}"/> -->
           </div>
           <div class="col-md-10">
