--- a/public/partials/social.html
+++ b/public/partials/social.html
@@ -1,21 +1,63 @@
 <div header name="name"></div>
-<div>
-  <div class="col-md-4 col-md-offset-4">
-    <h4>Latest Tweets</h4>
-  </div>
-  <div ng-repeat="tweet in tweets">
+<div class="row">
+  <div class="col-md-offset-1 twitter-border social-box col-md-5">
     <div class="row">
-      <div class="well white-bg col-md-4 col-md-offset-4">
-        <div class="row">
-          <div class="col-md-2 white-bg">
-            <!-- <img src="images/twitter.png" width="100%" /> -->
-            <!-- <img src="{{tweet.user.profile_image_url_https}}"/> -->
-          </div>
-          <div class="col-md-10">
-            {{tweet.text}}
+      <div class="col-md-12 text-center">
+        <img src="images/twitter.png" width="10%" />
+        <a href="https://twitter.com/fullstacknic" class="twitter-text">
+          @fullstacknic
+        </a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div ng-repeat="tweet in tweets">
+          <div class="row">
+            <div class="well white-bg twitter-border col-md-10 col-md-offset-1">
+              <div class="row">
+                <a href="https://twitter.com/fullstacknic">
+                  <div class="col-md-2 white-bg">
+                    <img src="{{tweet.user.profile_image_url_https}}"/>
+                  </div>
+                  <div class="col-md-10">
+                    <p class="twitter-text">
+                      {{tweet.text}}
+                    </p>
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="col-md-offset-1 col-md-4">
+    <div class="row linkedin-border social-box social-pad">
+      <div class="col-md-12 text-center">
+        <img src="images/linkedin_logo.png" width="30%" />
+      </div>
+      <div class="row social-pad">
+        <div class="col-md-12 text-center">
+          <a href="https://www.linkedin.com/in/nicgallardo" class="linkedin-text">
+            linkedin.com/in/nicgallardo
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="row social-pad">
+      <div class="col-md-12 text-center">
+        <img src="images/linkedin_logo.png" width="30%" />
+      </div>
+    </div>
+    <div class="row social-pad">
+      <div class="col-md-12 text-center">
+        <a href="https://www.linkedin.com/in/nicgallardo" class="linkedin-text">
+          linkedin.com/in/nicgallardo
+        </a>
+      </div>
+    </div> -->
   </div>
 </div>
