--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -1,2 +1,36 @@
 <div header name="name"></div>
-<h1> Portfolio Page</h1>
+<p>
+  clever text about the user goes here.
+</p>
+
+
+<div ng-repeat="project in projects">
+  <div class="row">
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <h4>{{project.title}}</h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-12">
+              <p>{{project.text}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div ng-repeat="tech in project.techs">
+                <span>{{tech}}</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-7 col-md-offset1">
+          <h5>Images go in here</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
