--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -1,34 +1,40 @@
 <div header name="name"></div>
-<p>
-  clever text about the user goes here.
-</p>
-
-
 <div ng-repeat="project in projects">
-  <div class="row">
-    <div class="col-md-4 col-md-offset-4 text-center">
-      <h4>{{project.title}}</h4>
+  <div class="project-container">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4 text-center grey-bg">
+        <a ng-href="{{project.url}}">
+          <h4 class="pink-one-text">{{project.title}}</h4>
+        </a>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="row">
-            <div class="col-md-12">
-              <p>{{project.text}}</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12">
-              <div ng-repeat="tech in project.techs">
-                <span>{{tech}}</span>
-              </div>
-            </div>
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+
+        <div class="row">
+          <div class="col-md-12">
+            <p>{{project.text}}</p>
           </div>
         </div>
-        <div class="col-md-7 col-md-offset1">
-          <h5>Images go in here</h5>
+        <div class="row">
+          <div class="col-md-12 pink-one-text">
+            <p><i> Project made using
+              <span ng-repeat="tech in project.techs">
+                {{tech}}{{$last ? '.' : ',' }}
+              </span>
+            </i></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="col-md-4" ng-repeat="image in project.images">
+              <img src="{{image}}"/>
+            </div>
+          </div>
         </div>
       </div>
     </div>
