--- a/public/partials/portfolio.html
+++ b/public/partials/portfolio.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-4 col-md-offset-4 text-center grey-bg">
         <a ng-href="{{project.url}}">
-          <h4 class="pink-one-text">{{project.title}}</h4>
+          <h4 class="pink-one-text bold-font">{{project.title}}</h4>
         </a>
       </div>
     </div>
@@ -31,7 +31,7 @@
       <div class="col-md-10 col-md-offset-1">
         <div class="row">
           <div class="col-md-12">
-            <div class="col-md-4" ng-repeat="image in project.images">
+            <div class="col-md-4 text-center project-img" ng-repeat="image in project.images">
               <img src="{{image}}"/>
             </div>
           </div>
