--- a/public/partials/social.html
+++ b/public/partials/social.html
@@ -1,10 +1,10 @@
 <div header name="name"></div>
 <div class="row">
-  <div class="col-md-offset-1 twitter-border social-box col-md-5">
+  <div class="col-md-offset-1 twitter-border social-box col-md-5 white-bg">
     <div class="row">
       <div class="col-md-12 text-center">
         <img src="images/twitter.png" width="10%" />
-        <a href="https://twitter.com/fullstacknic" class="twitter-text">
+        <a href="https://twitter.com/fullstacknic" class="twitter-text title-font">
           @fullstacknic
         </a>
       </div>
@@ -34,7 +34,7 @@
   </div>
 
   <div class="col-md-offset-1 col-md-4">
-    <div class="row linkedin-border social-box social-pad">
+    <div class="row linkedin-border social-box social-pad white-bg">
       <div class="col-md-12 text-center">
         <img src="images/linkedin_logo.png" width="30%" />
       </div>
