--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,6 +7,10 @@ body {
   font: 14px 'Vidaloka', Helvetica, Arial, sans-serif;
 }
 
+textarea {
+  resize: none;
+}
+
 .title-font {
   font-family: 'Tauri', serif;
 }
@@ -65,13 +69,51 @@ body {
   padding: 50px 0px 20px 0px;
 }
 
+.linkedin-box {
+  padding: 30px 0px 30px 0px;
+}
+
+.padding-30 {
+  /*margin: auto;*/
+  padding: 30px;
+}
 .custom-input {
   border: 0;
   outline: 0;
   background: transparent;
   border-bottom: 2px solid #F06BA8;
-  width: 400px;
+  width: 100px;
   color: #F06BA8;
+}
+
+.custom-input-form {
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border-bottom: 2px solid #F06BA8;
+  width: 40%;
+  color: #F06BA8;
+}
+
+.custom-text-area {
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border: 2px solid #F06BA8;
+  width: 80%;
+  color: #F06BA8;
+  margin-top: 20px;
+}
+
+
+.custom-submit {
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border: 2px solid #F06BA8;
+  width: 1-0%;
+  color: #F06BA8;
+  margin-top: 20px;
 }
 .welcome-title {
   background-color: black !important;
@@ -281,4 +323,26 @@ a:active {
 
 ::selection{
   background: black;
+}
+
+
+/*tool tip*/
+a.tooltip {outline:none; }
+a.tooltip strong {line-height:30px;}
+a.tooltip:hover {text-decoration:none;}
+a.tooltip span {
+    z-index:10;display:none; padding:14px 20px;
+    margin-top:-30px; margin-left:28px;
+    width:300px; line-height:16px;
+}
+a.tooltip:hover span{
+    display:inline; position:absolute; color:#111;
+    border:1px solid #DCA; background:#fffAF0;}
+.callout {z-index:20;position:absolute;top:30px;border:0;left:-12px;}
+
+/*CSS3 extras*/
+a.tooltip span
+{
+    border-radius:4px;
+    box-shadow: 5px 5px 8px #CCC;
 }
