--- a/public/partials/contact.html
+++ b/public/partials/contact.html
@@ -1,28 +1,34 @@
-<div header name="name"></div>
-<div class="col-md-offset-2 col-md-8">
-  <h3>
-    {{name ? 'Well looky there ' : ''}}{{name ? name : ''}}{{name ? ' you want to know more about me?' : ''}}
-  </h3>
-  <h3>
-    Just fill out the form below and I will be able to contact you as soon as possible.
-  </h3>
-  <form novalidate class="simple-form">
-      <div class="input-group form-margin">
-        <span class="input-group-addon" id="first-name">first name</span>
-        <input type="text" ng-model="contact.firstName" class="form-control" aria-describedby="first-name" placeholder="{{name}}"/>
-        <span class="input-group-addon" id="last-name">first name</span>
-        <input type="text" ng-model="contact.lastNAme" class="form-control" aria-describedby="last-name"/>
+<div ng-if="!name">
+  <div who test="testers"></div>
+</div>
+<div ng-if="name">
+  <div header name="name"></div>
+
+  <div header name="name"></div>
+  <div class="col-md-offset-2 padding-30 text-center col-md-8 white-bg twitter-border">
+    <h3 class="pink-one-text">
+      {{name ? 'Well looky there ' : ''}}{{name ? name : ''}}{{name ? ' you want to contact me?' : ''}}
+    </h3>
+    <form novalidate>
+      <div class="row">
+        <input type="text" ng-model="contact.firstName" class="custom-input-form" placeholder="first"/>
+        <input type="text" ng-model="contact.lastName" class="custom-input-form" placeholder="last"/>
       </div>
-      <div class="input-group form-margin">
-        <span class="input-group-addon" id="email">email</span>
-        <input type="text" ng-model="contact.email" class="form-control" aria-describedby="email"/>
-        <span class="input-group-addon" id="phone">phone</span>
-        <input type="text" ng-model="contact.phone" class="form-control" aria-describedby="phone"/>
+      <div class="row">
+        <input type="text" ng-model="contact.email" class="custom-input-form" aria-describedby="email" placeholder="email"/>
+        <input type="text" ng-model="contact.phone" class="custom-input-form" aria-describedby="phone" placeholder="phone"/>
       </div>
-      <div class="input-group form-margin">
-        <span class="input-group-addon" id="message">message</span>
-        <input type="text" ng-model="contact.message" class="form-control" aria-describedby="message"/>
+      <div class="row">
+        <textarea rows="6" ng-model="contact.message" class="custom-text-area">
+        </textarea>
       </div>
-    <input type="submit" ng-click="update(contact)" value="Save" class="btn btn-default"/>
-  </form>
+        <!-- <div class="input-group form-margin">
+        </div>
+        <div class="input-group form-margin">
+          <span class="input-group-addon" id="message">message</span>
+          <input type="text" ng-model="contact.message" class="form-control" aria-describedby="message"/>
+        </div> -->
+      <input type="submit" ng-click="update(contact)" value="submit" class="custom-submit"/>
+    </form>
+  </div>
 </div>
