--- a/public/partials/social.html
+++ b/public/partials/social.html
@@ -1,63 +1,55 @@
-<div header name="name"></div>
-<div class="row">
-  <div class="col-md-offset-1 twitter-border social-box col-md-5 white-bg">
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <img src="images/twitter.png" width="10%" />
-        <a href="https://twitter.com/fullstacknic" class="twitter-text title-font">
-          @fullstacknic
-        </a>
+<div ng-if="!name">
+  <div who test="testers"></div>
+</div>
+<div ng-if="name">
+  <div header name="name"></div>
+  <div class="row">
+    <div class="col-md-offset-1 twitter-border social-box col-md-5 white-bg">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <img src="images/twitter.png" width="10%" />
+          <a href="https://twitter.com/fullstacknic" class="twitter-text title-font">
+            @fullstacknic
+          </a>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div ng-repeat="tweet in tweets">
-          <div class="row">
-            <div class="well white-bg twitter-border col-md-10 col-md-offset-1">
-              <div class="row">
-                <a href="https://twitter.com/fullstacknic">
-                  <div class="col-md-2 white-bg">
-                    <img src="{{tweet.user.profile_image_url_https}}"/>
-                  </div>
-                  <div class="col-md-10">
-                    <p class="twitter-text">
-                      {{tweet.text}}
-                    </p>
-                  </div>
-                </a>
+      <div class="row">
+        <div class="col-md-12">
+          <div ng-repeat="tweet in tweets">
+            <div class="row">
+              <div class="">
+                <div class="row">
+                  <a href="https://twitter.com/fullstacknic">
+                    <div class="col-md-10 col-md-offset-1">
+                      <p class="twitter-text">
+                        {{tweet.text}}
+                      </p>
+                    </div>
+                  </a>
+                </div>
               </div>
+            </div>
+            <div ng-if=!$last>
+              <hr>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="col-md-offset-1 col-md-4">
-    <div class="row linkedin-border social-box social-pad white-bg">
-      <div class="col-md-12 text-center">
-        <img src="images/linkedin_logo.png" width="30%" />
+    <div class="col-md-offset-1 col-md-4 twitter-border social-box white-bg linkedin-box text-center">
+      <div class="row">
+        <div class="col-md-12">
+          <img src="images/linkedin_logo.png" width="30%" />
+        </div>
       </div>
-      <div class="row social-pad">
-        <div class="col-md-12 text-center">
+      <div class="row">
+        <div class="col-md-12">
           <a href="https://www.linkedin.com/in/nicgallardo" class="linkedin-text">
             linkedin.com/in/nicgallardo
           </a>
         </div>
       </div>
     </div>
-
-    <!-- <div class="row social-pad">
-      <div class="col-md-12 text-center">
-        <img src="images/linkedin_logo.png" width="30%" />
-      </div>
-    </div>
-    <div class="row social-pad">
-      <div class="col-md-12 text-center">
-        <a href="https://www.linkedin.com/in/nicgallardo" class="linkedin-text">
-          linkedin.com/in/nicgallardo
-        </a>
-      </div>
-    </div> -->
   </div>
 </div>
