--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -3,8 +3,8 @@
     <img src="images/ng_lg.png" class="center-block" width="20%" height="20%"/>
   </div>
 </div>
-<div class="row">
-  <div class="col-md-4 col-md-offset-5 home-interactive">
+<div class="row home-interactive">
+  <div class="col-md-4 col-md-offset-5">
     <p class="interactive interactive-text">
       Howdy, My name is Nic.
     </p>
@@ -26,5 +26,12 @@
       <p id="greeting-text" class="interactive-text">
       </p>
     </div>
+  </div>
+</div>
+</div>
+<div class="row">
+  <div class="col-md-4 col-md-offset-5">
+    <p class="interactive-tex"  id="welcome-back" style="visibility:hidden;">
+    </p>
   </div>
 </div>
